# TensorLibrary

./: CMakeLists.txt  README.md
include/: csr_adt.hpp  csr_adt_impl.hpp  csr_operations.hpp  csr_operations_impl.hpp  sparse_operations.hpp  sparse_operations_impl.hpp  xtensor_operations.hpp  xtensor_operations_impl.hpp
src/: csr_adt.cpp  sparse_operations.cpp
